--- a/styles.css
+++ b/styles.css
@@ -99,3 +99,15 @@ h2 {
     color: white;
     margin-top: auto; /* Залишає футер внизу */
 }
+
+  #recommendations {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-top: 20px;
+  }
+
+  .product:hover {
+    transform: scale(1.05);
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  }
